apps/9router/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: 9router
  namespace: 9router
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`aiproxy.oisd.dev`)
      kind: Rule
      services:
        - name: 9router
          port: 20128
      middlewares:
        - name: default-chain
          namespace: traefik
  tls:
    secretName: wildcard-tls-oisd
